login page update

--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
+<!--첫 화면-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/name.css" />
   <title>Document</title>
 </head>
 <body>
-  
+  <div id="login">
+    <span>이름을 입력하세요</span>
+    <div>
+      <input type="text" />
+      <span id="next">다음</span>
+    </div>
+    <a id="register" href="signUp.html">
+      <span>회원가입</span>
+    </a>
+  </div>
+  <script src="js/user.js"></script>
 </body>
 </html>
