--- a/signUp.html
+++ b/signUp.html
@@ -1,11 +1,28 @@
+<!--회원가입-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/register.css" />
   <title>Document</title>
 </head>
 <body>
-  
+  <div id="input-info">
+    <div>
+      <span>이름</span>
+      <input type="text" id="name" />
+    </div>
+    <div>
+      <span>이메일</span>
+      <input type="text" id="email" />
+    </div>
+    <div>
+      <span>비밀번호</span>
+      <input type="text" id="pw" />
+    </div>
+  </div>
+  <span id="submit" onclick="location.href='index.html'">가입</span>
 </body>
 </html>
