아이디/비밀번호 세션 전송

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div id="login">
-    <span>이름을 입력하세요</span>
+    <span>이름을 말해주세요</span>
     <div>
       <input type="text" />
       <span id="next">다음</span>
@@ -20,5 +20,6 @@
     </a>
   </div>
   <script src="js/user.js"></script>
+  <script src="js/voice.js"></script>
 </body>
 </html>
