--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="login">
     <span>이름을 말해주세요</span>
     <div>
-      <input type="text" />
+      <input type="text" value=""/>
       <span id="next">다음</span>
     </div>
     <a id="register" href="signUp.html">
