--- a/signIn.html
+++ b/signIn.html
@@ -11,7 +11,7 @@
   <div id="login">
     <span>비밀번호을 입력하세요</span>
     <div>
-      <input type="password" id="pw" />
+      <input type="password" id="pw" value="" />
       <span id="next-done">로그인</span>
     </div>
   </div>
