--- a/selectLevel.html
+++ b/selectLevel.html
@@ -30,7 +30,7 @@
     }
     .box{
       width: 280px;
-      height: 350px;
+      height: 370px;
       background-color: rgba(255, 255, 255, 0.2);
       margin-bottom: 10px;
       color: white;
@@ -55,22 +55,15 @@
     .box:hover .progressing {
      background-color: #EDEDED;
     }
-    .level{
-      margin: 0;
-      margin-top: 15px;
-    }
+   
     .game_title{
-      margin: 0;
-
-    }
-     .progressing {
-      width: 250px;
-      height: 20px;
-      background-color: rgba(255, 255, 255, 0.4);
-      border-radius: 10px;
+      margin : 0px;
       margin-top: 10px;
-      margin-bottom: 10px;
     }
+    .game_intro{
+      font-size: 17px;
+    }
+     
      /* Voice Recording Button Styles */
     #recordButton {
       margin-top: 10px;
@@ -194,21 +187,20 @@
   <div class="container_top">
     <div class="box" id="box1">
       <div class="game_img" style="height: 500px; width: 250px; background-color:blue; margin-top:15px; border-radius:7.5px; background-image: url('image/game_1.png'); background-size: cover;"></div>
-      <p class="level">1단계</p>
       <p class="game_title">벌레를 잡아라!</p>
-      <div class="progressing"></div>
+      <p class="game_intro">팔을 움직이고 주먹을 쥐어 <br/>벌레를 잡아보세요</p>
     </div>
  <div class="box" id="box2">
       <div class="game_img" style="height: 500px; width: 250px; background-color:blue; margin-top:15px; border-radius:7.5px; background-image: url('image/game_2.png'); background-size: cover;"></div>
-      <p class="level">2단계</p>
       <p class="game_title">벌을 피해라!</p>
-      <div class="progressing"></div>
+      <p class="game_intro">손가락을 향해 달려오는 벌을 <br/>손가락을 접어 피해보세요</p>
+
     </div>    
      <div class="box" id="box3">
       <div class="game_img" style="height: 500px; width: 250px; background-color:blue; margin-top:15px; border-radius:7.5px; background-image: url('image/game_3.png'); background-size: cover;"></div>
-      <p class="level">3단계</p>
       <p class="game_title">꽃을 옮겨라!</p>
-      <div class="progressing"></div>
+      <p class="game_intro">화면에 나온 꽃과 같은 꽃을 <br/>집어 바구니에 옮겨 담으세요</p>
+
     </div>
 
   </div>
