level1.html 게임 시작 전 설정

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/name.css" />
+  <link rel="stylesheet" href="/static/css/style.css" />
+  <link rel="stylesheet" href="/static/css/name.css" />
   <title>Document</title>
 </head>
 <body>
@@ -15,11 +15,11 @@
       <input type="text" value=""/>
       <span id="next">다음</span>
     </div>
-    <a id="register" href="signUp.html">
+    <a id="register" href="{{url_for('web.login_pw')}}">
       <span>회원가입</span>
     </a>
   </div>
-  <script src="js/user.js"></script>
-  <script src="js/voice.js"></script>
+  <script src="/static/js/user.js"></script>
+  <script src="/static/js/voice.js"></script>
 </body>
 </html>
